--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@cloudinary/react": "^1.13.1",
+    "@cloudinary/url-gen": "^1.21.0",
     "@fortawesome/fontawesome-free": "^6.7.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
